# corewarhs

./: .stylish-haskell.yaml  corewarhs.cabal  stack.yaml
app/: Main.hs
src/: Asm.hs  AsmInst.hs  Core.hs  Lib.hs  Player.hs  Settings.hs  VM.hs
