name:                corewarhs
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/mrkgnao/corewarhs#readme
license:             BSD3
license-file:        LICENSE
author:              Soham Chowdhury
maintainer:          chow.soham@gmail.com
copyright:           Soham Chowdhury, 2016
category:            none
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , lens
                     , array
                     , mtl
                     , exceptions
  default-language:    Haskell2010

executable corewarhs-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , corewarhs
  default-language:    Haskell2010

test-suite corewarhs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , corewarhs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mrkgnao/corewarhs
